# superglu

./: .cvsignore  .gitattributes  CMakeLists.txt  COPYING  ChangeLog.v1.3.0  ChangeLog.v1.3.1  ChangeLog.v1.3.2  ChangeLog.v1.3.3  Distfile  GNUmakefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  appveyor.yml  bootstrap  config.h.in  configure  configure.ac  configure.in  exports.ls  gnumakefiles.tar  superglu-config.cmake.in
.github/workflows/: codeql.yml  continuous-integration-workflow.yml
cfg/: genheader.pl
fixed-bugs/: 20031119--mismatched-delete.diff  README.txt
include/: .cvsignore  Makefile.am  Makefile.in  config.h.cmake.in  config.h.in  gluos.h
include/GL/: .cvsignore  Makefile.am  Makefile.in
libnurbs/: CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in
libnurbs/interface/: CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in  bezierEval.cc  bezierEval.h  bezierPatch.cc  bezierPatch.h  bezierPatchMesh.cc  bezierPatchMesh.h  glcurveval.cc  glcurveval.h  glinterface.cc  glrenderer.cc  glrenderer.h  glsurfeval.cc  glsurfeval.h  incurveeval.cc  insurfeval.cc  mystdlib.h
libnurbs/internals/: CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in  arc.cc  arc.h  arcsorter.cc  arcsorter.h  arctess.cc  arctess.h  backend.cc  backend.h  basiccrveval.cc  basiccrveval.h  basicsurfeval.cc  basicsurfeval.h  bezierarc.h  bin.cc  bin.h  bufpool.cc  bufpool.h  cachingeval.cc  cachingeval.h  ccw.cc  coveandtiler.cc  coveandtiler.h  curve.cc  curve.h  curvelist.cc  curvelist.h  curvesub.cc  dataTransform.cc  dataTransform.h  defines.h  displaylist.cc  displaylist.h  displaymode.h  flist.cc  flist.h  flistsorter.cc  (+61 more)
libnurbs/nurbtess/: CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in  definitions.h  directedLine.cc  directedLine.h  glimports.h  gridWrap.cc  gridWrap.h  monoChain.cc  monoChain.h  monoPolyPart.cc  monoTriangulation.cc  monoTriangulation.h  mystdio.h  mystdlib.h  partitionX.cc  partitionX.h  partitionY.cc  partitionY.h  polyDBG.cc  polyDBG.h  polyUtil.cc  polyUtil.h  primitiveStream.cc  primitiveStream.h  quicksort.cc  quicksort.h  rectBlock.cc  rectBlock.h  sampleComp.cc  sampleComp.h  sampleCompBot.cc  sampleCompBot.h  sampleCompRight.cc  sampleCompRight.h  sampleCompTop.cc  sampleCompTop.h  sampleMonoPoly.cc  (+6 more)
libspec/: .cvsignore  Distfile  GNUmakefile  Makefile.am  Makefile.in  libspec.pm  libspec.sh.in  libspecdefs  spectypes.pl
libtess/: CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in  README  alg-outline  dict-list.h  dict.c  geom.c  geom.h  memalloc.c  memalloc.h  mesh.c  mesh.h  normal.c  normal.h  priorityq-heap.c  priorityq-heap.h  priorityq.c  priorityq.h  render.c  render.h  sweep.c  sweep.h  tess.c  tess.h  tessmono.c  tessmono.h
libutil/: CMakeLists.txt  GNUmakefile  Makefile.am  Makefile.in  error.c  glue.c  gluint.h  mipmap.c  project.c  quad.c  registry.c
